# ubi-population-tool

./: .buildinfo  .pre-commit-config.yaml  .pylintrc  .travis.yml  1  CHANGELOG.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  test-requirements.txt  test.txt  tox.ini
.github/: CODEOWNERS
.github/workflows/: docs.yml  jenkins.yml  release.yml  tox-test.yml
_sources/: index.rst.txt
docs/: conf.py
examples/: expected_actions
scripts/: push-docs
tests/: conftest.py  test_cdn.py  test_cli.py  test_matcher.py  test_pulp.py  test_ubi_manifest_client.py  test_ubipop.py  test_utils.py
tests/data/: conf.yaml  ubiconf_golang.yaml
tests/integration/: test_association.py
tests/integration/data/: associate-md.yaml  clean-repos.yaml  do-not-associate-pkg-if-in-exclude.yaml  do-not-associate-pkg-if-not-in-include.yaml
tests/integration/data/ubi7/: associate-md-pkg.yaml  associate-pkg-multi-arch.yaml  associate-pkg.yaml  do-not-associate-excluded-pkg.yaml  expected_rhel7_repo.json  rhel-7-server.yaml
tests/integration/data/ubi8/: expected_rhel8_ppc64le_repo.json  rhel-8-server.yaml
ubipop/: __init__.py  _cdn.py  _matcher.py  _pulp.py  _pulp_client.py  _utils.py  cli.py  test_attr.py
ubipop/ubi_manifest_client/: client.py  models.py
ubipop/ubi_population_tool.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
